[tool:pytest]
minversion = 3.0.1
strict = true
testpaths = tests

[sdist]
# Forcibly regenerate the manifest on Python 2.6. This is default behavior on
# 2.7+ making this option deprecated. This should be removed once we drop 2.6.
force_manifest = 1

[bdist_wheel]
# We are a pure-Python project so a single wheel is enough.
universal = 1

[metadata]
# Ensure LICENSE is included in wheels.
license_file = LICENSE

# bdist_rpm settings contributed by Mihai Ibanescu <misa@redhat.com>
# This is currently *not* actively tested.
[bdist_rpm]
release = 1
build-requires = openssl-devel python-devel python-sphinx
group = Development/Libraries
build_script = rpm/build_script
doc-files = doc/_build/html
