[metadata]
# Ensure LICENSE is included in wheels.
license_file = LICENSE

# bdist_rpm settings contributed by Mihai Ibanescu <misa@redhat.com>
# This is currently *not* actively tested.
[bdist_rpm]
release = 1
build_requires = openssl-devel python-devel python-sphinx
group = Development/Libraries
build_script = rpm/build_script
doc_files = doc/_build/html
